common/styles/scss/_recordset.scss
.recordset-container {
    .top-panel-container {
        .top-flex-panel .top-left-panel div.panel-header {
            bottom: 9px;
        }

        .top-right-panel {
            h1#page-title {
                margin: 0;
                margin-bottom: 20px;
            }

            .show-filter-panel-btn {
                padding: 0;
                margin-bottom: 10px;
            }

            .recordset-controls-container {
                margin-bottom: 10px;
            }

            .recordset-selected-rows {
                .filter-chiclet {
                    max-width: none;
                }
            }

            $filter-chiclet-margin: 5px;
            .filter-chiclet {
                max-width: 350px;
                margin-right: $filter-chiclet-margin;
                margin-bottom: $filter-chiclet-margin;

                .chaise-btn:focus {
                    background-color: $white-color;
                }

                .chaise-btn.chaise-btn-secondary {
                    border-color: $border-color;
                    height: 25px;
                    min-width: 25px;
                    padding: 2px 5px;
                }

                .chaise-btn.filter-chiclet-remove {
                    padding: 3px;
                }

                .chaise-btn.filter-chiclet-title {
                    border-right: 0;
                    max-width: 150px;
                    text-overflow: ellipsis;
                    overflow: hidden;
                    padding-right: 2px;
                    text-align: left;
                    white-space: nowrap;
                }
                .chaise-btn.filter-chiclet-value {
                    text-overflow: ellipsis;
                    overflow: hidden;
                    white-space: nowrap;
                    max-width: 200px;
                    border-left: 0;
                    padding-left: 7px;
                    padding-right: 4px;

                    position: relative;
                    &:before {
                        content: ":";
                        position: absolute;
                        left: 0;
                    }
                }

                span {
                    color: $black-color;
                    cursor: default;
                }
            }

            .clear-all-btn {
                padding-left: 0;
                margin-bottom: $filter-chiclet-margin;
            }

            .recordset-chiclets-container {
                margin-bottom: 10px;
                padding-right: 250px;
            }
        }
    }


}

// chaise table
.outer-table {
    overflow-x: auto;
}

.chaise-table-header {
    padding-bottom: 10px;
    .page-size-dropdown {
        padding: 0 5px;
        padding-bottom: 2px;
    }
}

.chaise-table.table {
    border-top: 1px solid $table-border-color;
    border-bottom: 1px solid $table-border-color;
    margin: 0;

    tbody {
        display: table-row-group;
        vertical-align: middle;

        > tr > td.disabled-cell {
            background-color: #f4f4f4;
        }

        /* table hover */
        > tr:hover {
            background-color: #f7f0cf !important;

            /* match color from row highlight for disabled cells */
            > td.disabled-cell {
                background-color: #f7f0cf !important;
            }
        }

        /* odd disabled cells need to be darker */
        > tr:nth-child(odd) > td.disabled-cell {
            background-color: #ebebeb;
        }

        /* odd row hover for striped table */
        > tr:nth-child(odd):hover {
            background-color: #efebda !important;

            /* odd disabled cells need to match odd row hover for striped table above */
            > td.disabled-cell {
                background-color: #efebda !important;
            }
        }
    }

    tr {
        border-left: 1px solid $table-border-color;
        border-bottom: none;
    }

    .table-heading {
        background-color: $table-header-background-color;
        color: $black-color;

        .actions-header {
            width: 100px;

            &.view-header {
                width: 50px;
            }

            &.single-select-header {
                width: 65px;
            }

            &.multi-select-header {
                button {
                    display: block;
                    width: 120px;
                    &:first-child {
                        margin-bottom: 5px;
                    }
                }
            }
        }
    }

    &.table-striped > tbody > tr:nth-child(odd) {
        background: $table-striped-background-color;
    }

    >thead>tr>th {
        border-bottom: 1px solid $table-border-color;
    }

    >thead>tr>th,
    >tbody>tr>th,
    >tfoot>tr>th,
    >thead>tr>td,
    >tbody>tr>td,
    >tfoot>tr>td {
        border-top: none;
        border-right: 1px solid $table-border-color;
        word-wrap: break-word;
    }

    >tbody>tr>td {
        padding: 5px;
    }

    th {
        font-weight: 400;
        border-top: 1px solid $table-border-color;
        position: relative;

        &.actions-header {
            white-space: nowrap;
            text-align: center;
            font-size: $h4-font-size;
            padding: 8px;
        }

        .table-column-displayname {
            font-size: $h4-font-size;
        }

        // preserve space for the icon on the right
        padding-right: 10px + 15px;
        .table-heading-icons {
            position: absolute;
            bottom: 7px;
            right: 10px;
            font-size: $h4-font-size;

            // NOTE even though the conditions dictate that we should show one
            // of these elements under table-heading-icons at a time, but becuase of
            // the way angularjs is compiling the template sometimes both of the buttons
            // show up. So this css change will make sure only one of the buttons are
            // visible at a time.
            .column-error-icon ~ span, .aggregate-col-loader ~ span {
                display: none;
            }

            .aggregate-col-loader {
                right: -5px
            }
        }
    }

    .action-btns {
        text-align: center;
        font-size: 1.14rem;

        .chaise-btn {
            padding: 0;
            margin: -3px;

            .chaise-view-details {
                position: relative;
                top: 2px;
            }
        }
    }



}

.chaise-table-pagination {
    padding: 20px 0 50px 0;
    text-align: center;
    button {
        width: 75px;
    }
}
// END chaise table


/************* search loader ***************/
input.search-progress {
    background: url("images/loader.gif") no-repeat right center;
    background-size: 25px 25px;
    background-position-x: 99%;
}

// faceting directive
faceting {
    .side-panel-container {
        overflow-y: auto;
        -webkit-transition: all 1s;
        transition: all 1s;

        .faceting-columns-container {
            .panel-group {
                margin-bottom: 20px;

                // each facet panel
                .panel.facet-panel {
                    border-radius: 0;
                    border: 1px solid $border-color;

                    // active style
                    &.active,
                    &:hover {
                        border-color: rgb(51, 122, 183) !important;
                        animation-duration: 4s;
                        + .facet-panel {
                            margin-top: 0;
                            border-top: 0;
                        }
                    }

                    // override bootstrap default
                    + .facet-panel {
                        margin-top: -1px;
                        // border-top: 0;
                    }

                    .panel-heading {
                        // override bootstrap default
                        height: 40px;
                        border: 0;
                        border-radius: 0;
                        padding: 10px 5px;
                        text-transform: none;
                        position: relative;

                        background-color: $table-header-background-color;
                        .panel-title {
                            a {
                                color: $black-color;
                                text-decoration: none;

                                .toggle-icon {
                                    &.fa-chevron-right {
                                        margin-right: 3.4px;
                                        margin-left: 4px;
                                    }

                                    &.fa-chevron-down {
                                        margin-right: 3px;
                                    }
                                }

                                .facet-header-icon {
                                    position: absolute;
                                    right: 5px;
                                }
                            }
                        }
                    }

                    .panel-body {
                        padding: 10px;
                    }
                }
            }
        }
    }
}

.recordset-container.with-faceting .pager {
    padding-bottom: 50px;
}

.recordset-container > .main-container {
    overflow-x: hidden;
}


.chaise-search-box {
    font-size: 1rem;
}

// choice picker directive
.choice-picker {
    .picker-container {
        height: 100%;

        .chaise-search-box {
            margin-bottom: 10px;
        }

        .show-more-btn {
            padding: 0;
        }
    }
}

// range picker directive
.range-picker {
    hr {
        color: $border-color;
        width: 1px;
    }

    .js-plotly-plot {
        height: 150px;
        margin-left: -5px;
    }

    .plotly-actions {
        padding-top: 15px;
        text-align: right;
        line-height: 1;

        .chaise-info {
            bottom: 1px;
        }

        .chaise-zoom-in, .chaise-zoom-out {
            left: 1px;
            bottom: 1px;
        }
    }

    .zoom-plotly-button {
        border-top-left-radius: 4px !important;
        border-bottom-left-radius: 4px !important;
    }

    .plotly-how-to {
        border-color: white !important;
        cursor: default;
    }

    .plotly-how-to:hover {
        z-index: auto !important;
    }

    .divider{
        border: 0;
        margin: 5px 0;
    }
}


// list directive
.chaise-list-container {
    padding-left: 0;
    margin-bottom: 0px;

    .chaise-checkbox {
        margin-bottom: 7px;
        margin-left: 5px;
    }
    li:hover {
        background-color: rgb(241, 241, 241);
    }
}


// selected rows
.selected-rows {
    min-height: 45px;
}

